--- a/notifications/config.json
+++ b/notifications/config.json
@@ -3,7 +3,7 @@
     "project": "JUnit 5",
     "environment": "TFI",
     "comment": "Everyday task",
-    "reportLink": "",
+    "reportLink": "https://jenkins.autotests.cloud/job/c36-oPalushina-qa_quru-notificationBot/1/",
     "language": "ru",
     "allureFolder": "",
     "enableChart": false
